# cmake-qt

./: .gitingore  CMakeLists.txt  LICENSE  README.md  autosan.ps1  compile_commands.json  log.txt
include/: Calculator.hpp  demo.h
src/: Calculator.cpp  main.cpp
